# mqtt-tcp-bridge

IoT_Gateway_MQTT_TCP_Bridge/: .gitignore  CMakeLists.txt  MQTT.cpp  MQTT.h  README.md  TCPClient.h  TCPClientImpl.cpp  ThreadManager.cpp  ThreadManager.h  Utility.cpp  Utility.h  config.json  controllercommand.h  main.cpp
IoT_Gateway_MQTT_TCP_Bridge/include/: bridge_config.h  bridge_utils.h  mqtt_bridge.h  tcp_client.h
IoT_Gateway_MQTT_TCP_Bridge/src/: bridge_config.cpp  bridge_utils.cpp  gateway_main.cpp  mqtt_bridge.cpp  tcp_client.cpp  thread_manager.cpp
